--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -2,10 +2,6 @@ html {
 	background-color: #bec8b3;
 	height: 100vh;
 	font-size: 100%;
-	position: absolute;
-    top:  50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
 }
 
 body {
@@ -18,7 +14,17 @@ body {
 #homepage {
 	display: grid;
 	grid-template-rows: 80px 1fr 100px;
-	height: 96vh;
+
+	position: absolute;
+    /*top:  50%;*/
+    left: 50%;
+    transform: translate(-50%,0);
+
+    height: 96vh;
+    width: 96vw;
+
+    /*max-height: 1080px;*/
+    /*max-width: 828px;*/
 }
 
 .error-message {
